--- a/Basics/Notes_app/style.css
+++ b/Basics/Notes_app/style.css
@@ -46,6 +46,7 @@ body{
     display: flex;
    background-color: rgb(255, 191, 191);
    padding: 10px;
+   flex-direction: column;
    align-items: center;
    width: 100%;
    justify-content: center;
@@ -54,13 +55,13 @@ body{
 
 .note{
    background: wheat;
-   width: 90%;
+   width: 60%;
    position: relative;
-   height: 150px;
    padding: 10px;
    outline: none;
    border: 2px solid black;
    margin: 20px;
+   /* overflow: auto; */
 }
 
 .note img{
