--- a/mid/smartNotesApp/style.css
+++ b/mid/smartNotesApp/style.css
@@ -10,13 +10,11 @@ body{
 
 .container{
     background: linear-gradient(45deg, red ,blue);
-    width: 80%;
-    height: 80vh;
     margin: auto;
-    margin-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100vh;
 }
 
 .create-notes{
@@ -45,7 +43,6 @@ body{
 .notes-list{
     background: linear-gradient(45deg , red , white);
     width: 80%;
-    height: 60vh;
 }
 
 .note{
@@ -57,6 +54,7 @@ body{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 16px;
   border-radius: 28px;
+  overflow:auto;
 }
 
 .note img{
@@ -66,3 +64,4 @@ body{
     top: 18px;
     box-shadow: 2px 2px 2px 2px rgb(190, 186, 186);
 }
+
